# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.14.3
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Correct ChangeLog of 0.14.1/2 (segfault for cache method ebuild)
	- Pass PORTAGE_ROOTPATH and PORTAGE_BIN_PATH to ebuild.sh.
	  Note that ebuild.sh uses it to calculate PATH, so be careful!
	- Small code cleanup (changes in inline/static/global; header files)
	- Fix various compilation problems, see
	  http://bugs.gentoo.org/show_bug.cgi?id=243396

*eix-0.14.2
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Introduce /etc/portage/package.slot_upgrade_{allow,forbid}
	  to allow exceptions from the general UPGRADE_TO_HIGHEST_SLOT policy.
	  This can be used as manual workaround for the missing dependency
	  resolving which will never be available in eix. See
	  http://bugs.gentoo.org/show_bug.cgi?id=236036
	- Fix scripts to use proper printf instead of echo.
	- Introduce MARK_UPGRADE.
	- Allow combining marker attributes, e.g. MARK_UPGRADE="bold,underline"
	- Allow escaping for all variables containing space-separated paths.
	- Introduce <fullbest...> format.
	- Introduce <bestslotsupgrade...> (and <fullbestslotsupgrade...>)
	  format as a reaction to several requests, the latest being
	  http://forums.gentoo.org/viewtopic-t-278819-start-393.html
	  But please please note that if you use this in a script to call
	  emerge you are almost surely doing something wrong.
	  See the manpage for more details.
	- Fix typo in name --with-ebuild-sh-default
	- Fix segfault for cache methods ebuild and parse[*]|ebuild.

*eix-0.14.1
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Support sets in masks or sets; provide RECURSIVE_SETS.
	- Provide --installed-unstable, --installed-testing, --installed-masked
	  see http://bugs.gentoo.org/show_bug.cgi?id=240010
	- Make EIX_LOCAL_SETS a list of directories.
	- Fix visible output of cache methods metadata/flat, see
	  http://bugs.gentoo.org/show_bug.cgi?id=240038